--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         }
         /* Dropdown styles */
         .dropdown-content {
-            display: none;
+            display: none; /* Hidden by default, shown by group-hover */
             position: absolute;
             background-color: #f9f9f9;
             min-width: 160px;
@@ -156,9 +156,7 @@
         .dropdown-content a:hover {
             background-color: #f1f1f1;
         }
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
+        /* Removed .dropdown:hover .dropdown-content rule as it's now handled by group-hover:block */
         .sidebar-dropdown-content {
             display: none;
             padding-left: 1rem;
@@ -190,7 +188,7 @@
                         <a class="nav-link font-medium" data-target="ask">The Ask</a>
                         <div class="relative group">
                             <a class="nav-link font-medium" href="#" id="solutions-dropdown-toggle">Our Solutions</a>
-                            <div class="dropdown-content">
+                            <div class="dropdown-content group-hover:block">
                                 <a class="nav-link font-medium" data-target="students-proto">Students</a>
                                 <a class="nav-link font-medium" data-target="schools-proto">Schools</a>
                                 <a class="nav-link font-medium" data-target="organizers-proto">Organizers</a>
