--- a/index.html
+++ b/index.html
@@ -792,9 +792,9 @@
                 <h2 class="text-4xl font-bold mb-4">Thank You.</h2>
                 <p class="text-lg mb-8">We are confident in our vision, our technology, and our business model. We are ready to take your questions.</p>
                 <div class="flex flex-col md:flex-row justify-center items-center space-y-4 md:space-y-0 md:space-x-8">
-                    <p class="text-lg"><i class="fas fa-user-circle text-xl mr-2"></i> [Your Name]</p>
-                    <p class="text-lg"><i class="fas fa-envelope text-xl mr-2"></i> [Your Email]</p>
-                    <p class="text-lg"><i class="fas fa-phone-alt text-xl mr-2"></i> [Your Phone]</p>
+                    <p class="text-lg"><i class="fas fa-user-circle text-xl mr-2"></i> 7 Clubs</p>
+                    <p class="text-lg"><i class="fas fa-envelope text-xl mr-2"></i> 7clubs@qbank.com</p>
+                    <p class="text-lg"><i class="fas fa-phone-alt text-xl mr-2"></i> +3 1415 9265</p>
                 </div>
             </div>
         </footer>
